--- a/styles/global.css
+++ b/styles/global.css
@@ -5,9 +5,9 @@
 }
 
 body {
-  width: 1100px;
-  margin: 0 auto;
+  max-width: 1100px;
   font-family: Raleway, sans-serif;
+  margin: 0 auto;
 }
 
 h1,
