--- a/styles/style.css
+++ b/styles/style.css
@@ -1,1 +1,260 @@
-/* место для вашего кода */
+body{
+    box-sizing: border-box;
+    margin: 0;
+}
+/* Начало header */
+.header{
+    padding: 92px 24px;
+    display: grid;
+    grid-template-columns: 1fr min-content 1fr;
+    margin: 0 auto;
+}
+.header__menu{
+    display: flex;
+    justify-content: start;
+    align-items: center;
+}
+.header__link{
+    color: #000;
+    font-size: 18px;
+    font-style: normal;
+    font-weight: 400;
+    text-underline-offset: 4px;
+}
+.header__link_active{
+    text-decoration: none;
+}
+.header__links-list-item{
+    list-style: circle;
+    border-bottom: #000;
+}
+.header__links-list-item_no-bullit{
+    list-style-type: none;
+}
+.header__logo-image{
+    width: 148px;
+    height: 105px;
+}
+.header__links-list{
+    display: flex;
+    gap: 30px;
+}
+.address{
+    color: #000;
+    font-size: 18px;
+    font-style: normal;
+    font-weight: 400;
+    line-height: 24.3px;
+    text-underline-offset: 5px;
+    align-self: center;
+
+}
+.header__address{
+    justify-self: end;
+}
+/* cover */
+.cover {
+    background: url(../images/cover.jpg) center/cover;
+    position: relative;
+    z-index: 10;
+}
+.cover__title{
+    font-size: 100px;
+    line-height: 115%;
+    text-transform: uppercase;
+    color: #FFF;
+    display: flex;
+    flex-direction: column;
+    padding: 165px 24px 134px 24px;
+    letter-spacing: 30px;
+    gap: 20px;
+    z-index: 100;
+}
+.aligned-text_center{
+    text-align: center;
+    line-height: 100%;
+    padding-left: 60px;
+}  
+.aligned-text_right{
+    text-align: right;
+    line-height: 100%;
+}
+.letter-spacing-extended{
+    letter-spacing: 60px;
+}
+.no-letter-spacing{
+    letter-spacing: 0;
+}
+.cover__description{
+    color: #FFF;
+    font-size: 22px;
+    line-height: 28px;
+    text-transform: uppercase;
+    display: flex;
+    justify-content: space-between;
+    padding: 0 24px 51px 108px;
+}
+.bet-button{
+    text-transform: uppercase;
+    background: transparent;
+    border: #FFF solid 1px;
+    padding: 12px 32px;
+    font-size: 22px;
+    color: #FFF;
+}
+.cover__description-text{
+    align-self: center;
+    word-spacing: 17px;
+}
+ /* lots */
+ .lots{
+    margin-top: 180px;
+    margin-bottom: 180px;
+    padding: 0 24px 0 24px;
+ }
+ .lots__heading{
+    font-size: 40px;
+    font-weight: 700;
+    text-transform: uppercase;
+    padding-left: 26px;
+    padding-bottom: 27px;
+ }
+ .lots__card-list{
+    display: flex;
+    gap: 25px;
+    list-style-type: none;
+    padding-bottom: 30px;
+ }
+ .card-link{
+    text-decoration: none;
+ }
+ .card{
+    width: 334px;
+    min-height: 600px;
+    padding: 50px 40px;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    position: relative;
+    z-index: 10;
+ }
+.overlay{
+   position: absolute;
+   top: 0;
+   left: 0;
+   width: 100%;
+   height: 100%;
+   background-color: rgba(0, 0, 0, 0.6);
+   z-index: -1;
+}
+ .card__title{
+    color: #FFF;
+    font-size: 22px;
+    line-height: 120%;
+    text-decoration-line: underline;
+    text-underline-offset: 3px;
+    text-transform: uppercase;
+    font-weight: 700;
+    z-index: 10;
+
+ }
+ .card__text{
+    line-height: 120%;
+    font-size: 20px;
+    color: #FFF;
+    z-index: 10;
+ }
+ .card_type_film{
+    background: url(../images/card-lot-01.jpg) center/cover;
+ }
+ .card_type_book{
+    background: url(../images/card-lot-02.jpg) center/cover;
+ }
+ .card_type_picture{
+    background: url(../images/card-lot-03.jpg) center/cover;
+ }
+.lots__look-more-link{
+    font-size: 20px;
+    font-weight: 400;
+    padding-left: 26px;
+    text-underline-offset: 5px;
+}
+ /* about */
+  .about{
+    display: flex;
+    flex-direction: row;
+    padding: 0 24px;
+    height: 596px;
+    gap: 25px;
+    margin-bottom: 180px;
+  }
+ .about__column{
+    padding-top: 101px;
+ }
+ .about__logo{
+    background-color: #000;
+    border-radius: 50%;
+    height: 240px;
+    display: flex;
+    justify-content: center;
+    margin: 0 95px;
+    margin-bottom: 356px;
+ }
+ .about__logo-image{
+    width: 240px;
+    height: 114px;
+    align-self: center;
+ }
+ .about__title{
+    font-size: 40px;
+    font-weight: 700;
+    text-transform: uppercase;
+    flex-direction: column;
+    padding-bottom: 101px;
+    font-style: normal;
+ }
+ .about__text{
+    font-size: 20px;
+    font-weight: 400;
+    display: flex;
+    flex-direction: column;
+    gap: 26px;
+    line-height: 23px;
+ }
+ /* footer */
+ .footer{
+    padding: 0 24px;
+    margin-bottom: 80px;
+    display: grid;
+    grid-template-columns: repeat(3, 1fr);
+ }
+ .footer__menu{
+    justify-content: center;
+    display: flex;
+ }
+ .footer__links-list{
+    font-size: 18px;
+    font-weight: 400;
+    list-style-type: none;
+ }
+ .footer__link_active{
+    text-decoration: none;
+ }
+ .footer__link{
+    display: flex;
+    justify-content: center;
+    text-underline-offset: 4px;
+ }
+ .footer__social-list-item{
+    list-style-type: none;
+    display: flex;
+    gap: 48px;
+ }
+ .footer__social-icon{
+    height: 48px;
+    width: 48px;
+ }
+ .footer__social-list{
+    display: flex;
+    justify-content: end;
+ }
