--- a/styles/style.css
+++ b/styles/style.css
@@ -1,7 +1,3 @@
-body{
-    box-sizing: border-box;
-    margin: 0;
-}
 /* Начало header */
 .header{
     padding: 92px 24px;
@@ -9,11 +5,13 @@ body{
     grid-template-columns: 1fr min-content 1fr;
     margin: 0 auto;
 }
+
 .header__menu{
     display: flex;
     justify-content: start;
     align-items: center;
 }
+
 .header__link{
     color: #000;
     font-size: 18px;
@@ -21,24 +19,30 @@ body{
     font-weight: 400;
     text-underline-offset: 4px;
 }
+
 .header__link_active{
     text-decoration: none;
 }
+
 .header__links-list-item{
     list-style: circle;
     border-bottom: #000;
 }
+
 .header__links-list-item_no-bullit{
     list-style-type: none;
 }
+
 .header__logo-image{
     width: 148px;
     height: 105px;
 }
+
 .header__links-list{
     display: flex;
     gap: 30px;
 }
+
 .address{
     color: #000;
     font-size: 18px;
@@ -47,17 +51,19 @@ body{
     line-height: 24.3px;
     text-underline-offset: 5px;
     align-self: center;
-
 }
+
 .header__address{
     justify-self: end;
 }
+
 /* cover */
 .cover {
     background: url(../images/cover.jpg) center/cover;
     position: relative;
     z-index: 10;
 }
+
 .cover__title{
     font-size: 100px;
     line-height: 115%;
@@ -70,21 +76,25 @@ body{
     gap: 20px;
     z-index: 100;
 }
+
 .aligned-text_center{
     text-align: center;
     line-height: 100%;
-    padding-left: 60px;
-}  
+}
+
 .aligned-text_right{
     text-align: right;
     line-height: 100%;
 }
+
 .letter-spacing-extended{
     letter-spacing: 60px;
 }
+
 .no-letter-spacing{
-    letter-spacing: 0;
+   letter-spacing: 0;
 }
+
 .cover__description{
     color: #FFF;
     font-size: 22px;
@@ -94,24 +104,29 @@ body{
     justify-content: space-between;
     padding: 0 24px 51px 108px;
 }
+
 .bet-button{
     text-transform: uppercase;
     background: transparent;
-    border: #FFF solid 1px;
+    border: currentColor solid 1px;
     padding: 12px 32px;
     font-size: 22px;
     color: #FFF;
+    font-family: inherit;
 }
+
 .cover__description-text{
     align-self: center;
     word-spacing: 17px;
 }
+
  /* lots */
  .lots{
     margin-top: 180px;
     margin-bottom: 180px;
     padding: 0 24px 0 24px;
  }
+
  .lots__heading{
     font-size: 40px;
     font-weight: 700;
@@ -119,15 +134,19 @@ body{
     padding-left: 26px;
     padding-bottom: 27px;
  }
+
  .lots__card-list{
     display: flex;
     gap: 25px;
     list-style-type: none;
     padding-bottom: 30px;
+    flex-wrap: wrap;
  }
+
  .card-link{
     text-decoration: none;
  }
+
  .card{
     width: 334px;
     min-height: 600px;
@@ -138,6 +157,7 @@ body{
     position: relative;
     z-index: 10;
  }
+
 .overlay{
    position: absolute;
    top: 0;
@@ -147,6 +167,7 @@ body{
    background-color: rgba(0, 0, 0, 0.6);
    z-index: -1;
 }
+
  .card__title{
     color: #FFF;
     font-size: 22px;
@@ -156,29 +177,34 @@ body{
     text-transform: uppercase;
     font-weight: 700;
     z-index: 10;
-
  }
+
  .card__text{
     line-height: 120%;
     font-size: 20px;
     color: #FFF;
     z-index: 10;
  }
+
  .card_type_film{
     background: url(../images/card-lot-01.jpg) center/cover;
  }
+
  .card_type_book{
     background: url(../images/card-lot-02.jpg) center/cover;
  }
+
  .card_type_picture{
     background: url(../images/card-lot-03.jpg) center/cover;
  }
+
 .lots__look-more-link{
     font-size: 20px;
     font-weight: 400;
     padding-left: 26px;
     text-underline-offset: 5px;
 }
+
  /* about */
   .about{
     display: flex;
@@ -188,9 +214,11 @@ body{
     gap: 25px;
     margin-bottom: 180px;
   }
+
  .about__column{
     padding-top: 101px;
  }
+
  .about__logo{
     background-color: #000;
     border-radius: 50%;
@@ -198,13 +226,14 @@ body{
     display: flex;
     justify-content: center;
     margin: 0 95px;
-    margin-bottom: 356px;
  }
+ 
  .about__logo-image{
     width: 240px;
     height: 114px;
     align-self: center;
  }
+
  .about__title{
     font-size: 40px;
     font-weight: 700;
@@ -213,6 +242,7 @@ body{
     padding-bottom: 101px;
     font-style: normal;
  }
+
  .about__text{
     font-size: 20px;
     font-weight: 400;
@@ -221,6 +251,7 @@ body{
     gap: 26px;
     line-height: 23px;
  }
+
  /* footer */
  .footer{
     padding: 0 24px;
@@ -228,32 +259,39 @@ body{
     display: grid;
     grid-template-columns: repeat(3, 1fr);
  }
+
  .footer__menu{
     justify-content: center;
     display: flex;
  }
+
  .footer__links-list{
     font-size: 18px;
     font-weight: 400;
     list-style-type: none;
  }
+
  .footer__link_active{
     text-decoration: none;
  }
+
  .footer__link{
     display: flex;
     justify-content: center;
     text-underline-offset: 4px;
  }
+
  .footer__social-list-item{
     list-style-type: none;
     display: flex;
     gap: 48px;
  }
+
  .footer__social-icon{
     height: 48px;
     width: 48px;
  }
+
  .footer__social-list{
     display: flex;
     justify-content: end;
